# laskin

./: .editorconfig  .gitmodules  .travis.yml  CMakeLists.txt  LICENSE  README.md  TODO.md
.github/workflows/: build.yml
2cpp/: CMakeLists.txt  README.md
2cpp/src/: instruction.cpp  instruction.hpp  main.cpp  options.hpp  program.cpp  program.hpp  transpile.cpp  transpile.hpp  writer.cpp  writer.hpp
cli/: CMakeLists.txt
cli/src/: linenoise.hpp  main.cpp  repl.cpp
cmake/: FindMPFR.cmake  add-dependency.cmake  enable-all-warnings.cmake
common/cmake/: FindGMP.cmake  paths.cmake
common/include/laskin/: ast.hpp  chrono.hpp  config.hpp  context.hpp  error.hpp  number.hpp  quote.hpp  unit.hpp  utils.hpp  value.hpp
common/src/: ast.cpp  chrono.cpp  context.cpp  error.cpp  number.cpp  parser.cpp  unit.cpp  value.cpp
common/src/api/: boolean.cpp  date.cpp  month.cpp  number.cpp  record.cpp  string.cpp  time.cpp  utils.cpp  vector.cpp  weekday.cpp
common/src/operator/: add.cpp  divide.cpp  equals.cpp  multiply.cpp  substract.cpp
editor/: laskin.vim
examples/: closures.laskin  factorial  fibonacci  floor5.laskin  hello-world  helloworld.laskin  loop  loop.laskin
gui/: CMakeLists.txt  README.md  laskin-gui.desktop
gui/include/laskin/gui/: context.hpp  dictionary-display.hpp  line-display.hpp  stack-display.hpp  window.hpp
gui/src/: context.cpp  dictionary-display.cpp  dictionary-display.hpp  line-display.cpp  line-display.hpp  line-editor.cpp  line-editor.hpp  main.cpp  stack-display.cpp  stack-display.hpp  utils.cpp  utils.hpp  window.cpp  window.hpp
include/laskin/: ast.hpp  chrono.hpp  context.hpp  error.hpp  number.hpp  unit.hpp  utils.hpp  value.hpp
laskin/: CMakeLists.txt
laskin/include/laskin/: ast.hpp  chrono.hpp  context.hpp  error.hpp  macros.hpp  number.hpp  position.hpp  quote.hpp  types.hpp  unit.hpp  utils.hpp  value.hpp
laskin/src/: ast.cpp  chrono.cpp  context.cpp  error.cpp  number.cpp  parser.cpp  position.cpp  quote.cpp  record.cpp  utils.cpp  value.cpp  vector.cpp
laskin/src/api/: boolean.cpp  date.cpp  month.cpp  number.cpp  quote.cpp  record.cpp  string.cpp  time.cpp  utils.cpp  vector.cpp  weekday.cpp
laskin/src/operator/: add.cpp  compare.cpp  divide.cpp  equals.cpp  modulo.cpp  multiply.cpp  substract.cpp
src/: api-bool.cpp  api-io.cpp  api-list.cpp  api-numbers.cpp  api-program.cpp  api-script.cpp  api-stack.cpp  api-string.cpp  api-trigonometry.cpp  ast.cpp  chrono.cpp  context.cpp  defines.hpp  error.cpp  error.hpp  function.cpp  function.hpp  hashmap.hpp  interpreter.cpp  interpreter.hpp  main.cpp  number.cpp  numbers.cpp  numbers.hpp  parser.cpp  quote.cpp  ratio.cpp  ratio.hpp  repl.cpp  script.cpp  script.hpp  signature.cpp  signature.hpp  stack.hpp  token.cpp  token.hpp  unit.cpp  utils.cpp  value.cpp  value.hpp
src/api/: date.cpp  month.cpp  number.cpp  quote.cpp  string.cpp  time.cpp  utils.cpp  vector.cpp  weekday.cpp
src/operator/: add.cpp  compare.cpp  divide.cpp  equals.cpp  multiply.cpp  substract.cpp
